@@ -1573,7 +1573,7 @@ public class DFSClient implements java.io.Closeable, RemotePeerFactory,
         }
         return null;
       }
-      return callAppend(stat, src, buffersize, progress);
+      return callAppend(src, buffersize, progress);
     }
     return null;
   }
@@ -1644,7 +1644,7 @@ public class DFSClient implements java.io.Closeable, RemotePeerFactory,
   }
 
   /** Method to get stream returned by append call */
-  private DFSOutputStream callAppend(HdfsFileStatus stat, String src,
+  private DFSOutputStream callAppend(String src,
       int buffersize, Progressable progress) throws IOException {
     LocatedBlock lastBlock = null;
     try {
@@ -1658,20 +1658,9 @@ public class DFSClient implements java.io.Closeable, RemotePeerFactory,
                                      UnresolvedPathException.class);
     }
 
-    if(dfsClientConf.hdfsClientEmulationForSF){ // file status can change during append. When
-      // hdfs client writes to in-memory file then the file is move to the datanodes and the file
-      // status will change.
-      //
-      stat = getFileInfo(src);
-      if (stat == null) { // No file found
-        throw new FileNotFoundException(
-                "failed to append to non-existent file " + src + " on client " +
-                        clientName);
-      }
-    }
-
+    HdfsFileStatus newStat = getFileInfo(src);
     return DFSOutputStream.newStreamForAppend(this, src, buffersize, progress,
-        lastBlock, stat, dfsClientConf.createChecksum(),isStoreSmallFilesInDB(),
+        lastBlock, newStat, dfsClientConf.createChecksum(),isStoreSmallFilesInDB(),
         getDBFileMaxSize(), dfsClientConf.hdfsClientEmulationForSF);
 
   }
@@ -1697,12 +1686,7 @@ public class DFSClient implements java.io.Closeable, RemotePeerFactory,
   private DFSOutputStream append(String src, int buffersize, Progressable progress)
       throws IOException {
     checkOpen();
-    HdfsFileStatus stat = getFileInfo(src);
-    if (stat == null) { // No file found
-      throw new FileNotFoundException("failed to append to non-existent file "
-          + src + " on client " + clientName);
-    }
-    final DFSOutputStream result = callAppend(stat, src, buffersize, progress);
+    final DFSOutputStream result = callAppend(src, buffersize, progress);
     beginFileLease(result.getFileId(), result);
     return result;
   }
